# framebuffer-vncserver

./: .gitignore  .travis.yml  .travis.yml.bak  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  Vagrantfile.20.04.rb  fbvnc.service  framebuffer-vncserver.pro  gradient.py  prepare-test.sh  vagrant.sh  vfb.py
.github/workflows/: main.yml
src/: framebuffer-vncserver.c  keyboard.c  keyboard.h  logging.h  mouse.c  mouse.h  touch.c  touch.h
tests/vfb/: Makefile  README  ins.sh
yocto/: framebuffer-vncserver_git.bb
